# programmation-E2I

./: .gitignore  README  README.md  build_markdown.sh
3A/: Makefile
3A/TP1/: premier_programme.c
3A/TP10/: sort.h  sort_efficiency.c  sort_test.c
3A/TP2/: altitude.c  amicable_nums.c  prime_search.c
3A/TP3/: permutation_var.c
3A/TP4/: aff_mat.c
3A/TP5/: ex3.c
3A/TP6/: main.c
3A/TP7/: main.c
3A/TP8/: id3Edit.c  my_cp.c  my_file.c  my_wc.c  recognition.c
3A/TP9/: dichotomic.c  palindrome.c
3A/exam_fin_2020/: Makefile
3A/projet_hash_table/: Makefile  dico.c
TP1/: suites.c
TP10/: Makefile  sort.c
TP11/: Makefile  directory.c  listes.c
TP12/: main.c
TP2/: pascal.c  perfect_search.c
TP3/: 2nd_deg.c  fact.c  nim.c  nim_ROBINS.c
TP4/: calcul_mat.c  fibonacci.c  qr.c
TP5/: Makefile  ex1.c  ex2.c  ex4.c  ex6.c
TP7/: main.c  test.in
TP8/: Makefile  id3Edit.c  main.c  my_cp.c  my_file.c  my_wc.c  recognition.h
TP9/: bubbleSort.c  dichotomic.c  hanoi.c  palindrome.c  rcat.c  rcp.c
exam2015/: main.c
exam2020/: main.c
exam_fin_2020/: main.c
programme_poly/: horreur.c
projet_hash_table/: Makefile  README.md  dico.c  dico.h  fonctions.c  fr_FR.dic  hash_table.c  hash_table.h  main.c  texte.txt
python/: build_md.py  python_programs.md  serie1.py  serie2.py  serie4.py
revision_partiel/: main.c
unix-5A/: Makefile
unix-5A/tp2/: CMakeLists.txt  Makefile  mgrep.c  mgrepPool.c  processPool.c  processPool.h  test_exec.c  test_fork.c
unix-5A/tp3/: CMakeLists.txt  echo_dollar.c  strUtils.c  strUtils.h  test_pipe.c  test_signal.c  test_signal_client.c  test_signal_server.c  test_stdin_override.c  test_stdin_override_fifo.c  time_providers.c
unix-5A/tp4/: CMakeLists.txt  ipc_client.c  ipc_parent_child.c  ipc_server.c  sem_process_pool_mgr.c  sem_test.c  semaphores.c  semaphores.h
(+149 files in other folders)
